cabal-version: 3.0
name:          miso-css
version:       0.0.1

synopsis:      verified CSS application
description:
    == Motivation
    #motivation#
    
    CSS rule is applied to all nodes matching its selector. CSS class of an
    atomic selector can be applied to any DOM element, but that is not true
    for classes in composite selectors, consisting from a sequence of
    classes or plain tag name.
    
    The general rule is anscetors of every node, a CSS class is applied to,
    should containt all classes in the selector preceding the appiled class.
    
    == Usage
    #usage#
    
    === Quasi-quote input
    #quasi-quote-input#
    
    > {-# LANGUAGE QuasiQuotes #-}
    > module Css where
    > import Miso.Css ( css )
    >
    > [css|
    > .c .b .a {
    >   color: #fc2c2c;
    > }
    > |]
    
    > module Main where
    >
    > import Css (a, b, c, cssAsLiteralText)
    > import Miso
    > import Miso.Css.Html (toView, div_, button_, class_)
    >
    > app :: App Model Action
    > app = (component emptyModel updateModel viewModel)
    >   { styles = [ Style cssAsLiteralText ] }
    >
    > viewModel :: Model -> View Model Action
    > viewModel _ =
    >   toView $
    >     div_ [ class_ c ]
    >       [ div_ [ class_ b ]
    >         [ button_
    >             [ class_ a ]
    >             [ "Submit" ]
    >         ]
    >       ]
    
    === File input
    #file-input#
    
    > {-# LANGUAGE TemplateHaskell #-}
    > module Css where
    > import Miso.Css ( includeCss )
    >
    > includeCss "assets/style.css"
    
    > module Main where
    >
    > import Css (a, b, c, style)
    > -- ...
    
    == Development environment
    #development-environment#
    
    HLS should be available inside the default dev shell.
    
    > $ nix develop
    > $ emacs src/*/*/Qq.hs &
    > $ cabal build
homepage:      http://github.com/yaitskov/miso-css
license:       BSD-3-Clause
license-file:  LICENSE
author:        Daniil Iaitskov
maintainer:    dyaitskov@gmail.com
copyright:     Daniil Iaitkov 2026
category:      Miso, HTML, CSS, Template Haskell
build-type:    Simple
bug-reports:   https://github.com/yaitskov/miso-css/issues
extra-source-files:
  test/style.css
extra-doc-files:
  changelog.md
tested-with:
  GHC == 9.12.2

source-repository head
  type:
    git
  location:
    https://github.com/yaitskov/miso-css.git

common base
  default-language: GHC2024
  ghc-options: -Wall
  default-extensions:
    DefaultSignatures
    NoImplicitPrelude
    OverloadedStrings
    TemplateHaskell
  build-depends:
    , base >=4.7 && < 5
    , template-haskell  < 3

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    Miso.Css
  other-modules:
    Miso.Css.Escape
    Miso.Css.IncludeCss
    Miso.Css.Qq
    Miso.Css.Style
  build-depends:
    , add-dependent-file >= 0.0.2 && < 1
    , containers         < 1
    , css-syntax         < 1
    , filepath           < 2
    , template-haskell   < 3
    , text               < 3

test-suite test
  import: base
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
    Miso.Css.Test.IncludeCssDefs
    Miso.Css.Test.IncludeCssAsserts
    Miso.Css.Test.QqDefs
    Miso.Css.Test.QqAsserts
    Discovery
  hs-source-dirs:
    test
  ghc-options: -Wall -rtsopts -threaded -main-is Driver
  build-depends:
    , css-class-bindings
    , QuickCheck
    , tasty
    , tasty-discover
    , tasty-hunit
    , tasty-quickcheck
